--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "ts-node-dev --transpile-only --exit-child --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
